# parse-place

./: cities.json  failed.py  majorCities.csv  not_processed_spots.json  prefectures.json  pyproject.toml  setup.cfg  spots.csv  spots.json  spots.txt  spots_bk.json  test.csv  test.json
register_places/: add_spots.py  check_place_result.py  csv_io.py  get_spots.py  graphql_query.py  parse_cities.py  parse_spots.py  places_api.py  processed.py  util.py  view.py
register_places/constants/: prefectures_code.py
register_places/models/: place.py
tests/: test_register_places.py
